# sia-sdk-rs

./: .gitignore  AUDIT_DATA_LOSS.md  Cargo.toml  Package.swift  README.md  SiaSDK.podspec  knope.toml
.cargo/: config.toml
.changeset/: add_a_version_field_to_slabs.md  add_account_api_endpoint_to_app_client_and_ffi_implementation.md  add_cross_target_test_proc_macro.md  add_encoded_size_helper.md  add_encoded_size_helper_to_sia_storage_init_sia_storage_wasm.md  add_encoded_size_to_sia_storage_and_add_sia_storage_wasm_crate.md  add_generic_support_for_reading_and_writing_erasure_coded_slabs.md  add_host_query_options.md  add_method_for_pinning_multiple_slabs.md  add_method_to_generate_object_urls.md  add_object_methods_to_ffi_crate.md  add_object_sharing.md  add_objects_api_to_sdk_and_app_client.md  add_pin_slab_and_unpin_slab_to_ffi.md  add_progress_callback.md  add_sdk_client.md  add_slab_downloader.md  add_slab_meta_to_ffi_sdk.md  add_slab_metadata_to_sdk.md  add_slab_pruning.md  add_support_for_encrypting_and_decrypting_shards.md  add_support_for_reedsolomon_erasure_coding.md  add_v2_host_announcement_support.md  add_webtransport_client_for_wasm_target.md  added_a_webtransport_implementation_of_the_hostdialer_trait.md  added_asyncsiaencodable_and_asyncsiadecodable_traits.md  added_cancel_function_to_cancel_inflight_packed_uploads.md  added_missing_sdk_functionality.md  (+139 more)
indexd/: CHANGELOG.md  Cargo.toml
indexd/benches/: upload.rs
indexd/examples/: basic.rs
indexd/src/: app_client.rs  builder.rs  download.rs  hosts.rs  lib.rs  mock.rs  object_encryption.rs  quic.rs  rhp4.rs  slabs.rs  upload.rs
indexd/src/quic/: client.rs  download.rs  upload.rs
indexd/src/transport/: mod.rs  quic.rs  siamux.rs
indexd_ffi/: CHANGELOG.md  Cargo.toml  pyproject.toml  uniffi.toml
indexd_ffi/bindings/swift/: Package.swift  README.md  SiaSDK.podspec
indexd_ffi/examples/: test.rs
indexd_ffi/examples/python/: README.md  example.py  indexd.py  indexdFFI.h  indexdFFI.modulemap  indexd_ffi.py  test.py
indexd_ffi/examples/swift/: README.md  build-xcframework.sh
indexd_ffi/examples/swift/Example/: Package.swift
indexd_ffi/examples/swift/Example/Sources/: main.swift
indexd_ffi/python/sia_indexd/: __init__.py  wrappers.py
indexd_ffi/scripts/: build-swift.sh
indexd_ffi/src/: build.rs  builder.rs  io.rs  lib.rs  logging.rs  tls.rs
indexd_js/: Cargo.toml
indexd_js/.cargo/: config.toml
indexd_js/example/: README.md  index.html  index.js  package-lock.json  package.json  webpack.config.js
indexd_js/pkg/: indexd_sdk.d.ts  indexd_sdk.js  indexd_sdk_bg.js  indexd_sdk_bg.wasm  indexd_sdk_bg.wasm.d.ts  package.json
indexd_js/src/: lib.rs
indexd_js/tests/: wasm.rs
indexd_wasm/: Cargo.toml
indexd_wasm/.cargo/: config.toml
indexd_wasm/src/: app_client.rs  lib.rs  slabs.rs  webtransport.rs
indexd_wasm/src/webtransport/: client.rs  download.rs  upload.rs
mux/: Cargo.toml
mux/benches/: mux.rs
mux/examples/: rpc_settings.rs
mux/src/: frame.rs  handshake.rs  lib.rs  mux.rs
mux/tests/: interop.rs
mux/testutil/go-interop/: go.mod  go.sum  main.go
rhp4_quic/: Cargo.toml
rhp4_quic/src/: lib.rs
sia/: CHANGELOG.md  Cargo.toml
sia/benches/: slab_upload.rs  slabs.rs
sia/src/: app_client.rs  consensus.rs  encoding.rs  encoding_async.rs  encryption.rs  erasure_coding.rs  lib.rs  macros.rs  merkle.rs  objects.rs  rhp.rs  seed.rs  signing.rs  slabs.rs
sia/src/encoding/: v1.rs  v2.rs
sia/src/encoding_async/: mod.rs  v2.rs
sia/src/objects/: encryption.rs  slabs.rs  upload.rs  uploader.rs
sia/src/rhp/: merkle.rs  protocol.rs  quic.rs  rpc.rs  types.rs
sia/src/types/: common.rs  currency.rs  specifier.rs  spendpolicy.rs  v1.rs  v2.rs
sia_core/: CHANGELOG.md  Cargo.toml
sia_core/benches/: merkle_root.rs
sia_core/src/: blake2.rs  consensus.rs  encoding.rs  encoding_async.rs  lib.rs  macros.rs  merkle.rs  rhp4.rs  seed.rs  signing.rs  test_util.rs
sia_core/src/encoding/: v1.rs  v2.rs
sia_core/src/encoding_async/: v2.rs
sia_core/src/merkle/: blake2b.rs
sia_core/src/merkle/blake2b/: avx2.rs  avx512.rs  generic.rs  neon.rs  tests.rs  wasm.rs
sia_core/src/rhp4/: merkle.rs  protocol.rs
sia_core/src/types/: common.rs  currency.rs  specifier.rs  spendpolicy.rs  utils.rs  v1.rs  v2.rs  work.rs
sia_core_derive/: CHANGELOG.md  Cargo.toml
sia_core_derive/src/: lib.rs
sia_sdk/: CHANGELOG.md  Cargo.toml
sia_sdk/benches/: merkle_root.rs  slabs.rs
sia_sdk/src/: blake2.rs  consensus.rs  encoding_async.rs  encryption.rs  erasure_coding.rs  lib.rs  macros.rs  objects.rs  rhp.rs  rpc.rs  seed.rs  signing.rs  types.rs
sia_sdk/src/encoding/: v2.rs
sia_sdk/src/encoding_async/: v2.rs
sia_sdk/src/objects/: dialer.rs  encryption.rs  erasure_coding.rs  slabs.rs
sia_sdk/src/rhp/: merkle.rs  quic.rs  rpc.rs  types.rs  webtransport.rs
sia_sdk/src/types/: common.rs  spendpolicy.rs  utils.rs  v1.rs  v2.rs
sia_storage/: CHANGELOG.md  Cargo.toml  README.md
sia_storage/benches/: upload.rs
sia_storage/examples/: benchmark.rs  upload_file.rs
sia_storage/src/: app_client.rs  builder.rs  congestion.rs  download.rs  encryption.rs  erasure_coding.rs  hosts.rs  lib.rs  mock.rs  object_encryption.rs  rhp4.rs  sdk.rs  slabs.rs  upload.rs  wasm_time.rs
sia_storage/src/compat/: mod.rs  wasm_time.rs
sia_storage/src/hosts/: metrics.rs
sia_storage/src/rhp4/: mock.rs  siamux.rs  web_transport.rs
sia_storage_ffi/: CHANGELOG.md  Cargo.toml  README.md
sia_storage_ffi/examples/python/: README.md  example.py
sia_storage_ffi/src/: builder.rs  io.rs  lib.rs  logging.rs
sia_storage_napi/: CHANGELOG.md  Cargo.toml  package.json
sia_storage_napi/examples/: benchmark.mjs  test.mjs
sia_storage_napi/src/: builder.rs  io.rs  lib.rs  logging.rs
sia_storage_wasm/: CHANGELOG.md  Cargo.toml  TODO.md
sia_storage_wasm/example/: index.html  worker.js
sia_storage_wasm/examples/: index.html  main.js
sia_storage_wasm/src/: TODO.md  app_key.rs  builder.rs  helpers.rs  lib.rs  logging.rs  object.rs  packed.rs  sdk.rs  sealed.rs  stream_reader.rs  streaming.rs  types.rs
(+26 files in other folders)
