[package]
name = "indexd"
version = "0.0.1"
edition = "2024"
repository = "https://github.com/SiaFoundation/sia-sdk-rs"
license = "MIT"
description = "SDK for interacting with the Indexd API"
authors = ["The Sia Foundation"]
categories = ["cryptography::cryptocurrencies"]
keywords = ["sia", "decentralized", "blockchain", "depin", "storage"]

[lib]
name = "indexd"
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.12.23", features = ["json"] }
rustls = { version = "0.23.31", features = ["ring"] }
serde = "1.0.219"
serde_json = "1.0.143"
thiserror = "2.0.16"
sia_sdk = { path = "../sia_sdk" }
time = "0.3.41"
tokio = { version = "1.47.1", features = ["fs", "sync", "io-util", "macros", "rt"] }
rand = "0.9.2"
blake2b_simd = "1.0.3"
url = "2.5.7"
log = "0.4.28"
quinn = "=0.11.8"
bytes = "1.10.1"
futures = "0.3.31"
tokio-util = { version = "0.7.16", features = ["rt"] }
priority-queue = "2.5.0"
serde_with = {version = "3.14.0", features = ["base64"]}
chacha20 = "0.9.1"

[dev-dependencies]
httptest = "0.16.3"
rustls-platform-verifier = "0.6.1"
tokio = { version = "1.47.1", features = ["macros"] }
