[package]
name = "indexd"
version = "0.1.2"
edition = "2024"
repository = "https://github.com/SiaFoundation/sia-sdk-rs"
license = "MIT"
description = "SDK for interacting with a Sia network indexer"
authors = ["The Sia Foundation"]
categories = ["cryptography::cryptocurrencies"]
keywords = ["sia", "decentralized", "blockchain", "depin", "storage"]

[lib]
name = "indexd"
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.12.24", default-features = false, features = ["charset", "http2", "json", "rustls-tls"] }
rustls = { version = "0.23.35", default-features = false, features = ["ring", "logging", "std", "tls12"] }
serde = "1.0.228"
serde_json = "1.0.145"
thiserror = "2.0.17"
sia_sdk = { path = "../sia_sdk", version = "0.1.3" }
tokio = { version = "1.48.0", features = ["fs", "sync", "io-util", "macros", "rt"] }
rand = "0.9.2"
blake2b_simd = "1.0.3"
url = "2.5.7"
log = "0.4.28"
# avoid rustls-platform-verifier until https://github.com/rustls/rustls-platform-verifier/issues/115 is resolved 
quinn = { version = "0.11.9", default-features = false, features = ["bloom", "log", "runtime-tokio", "rustls-ring"] }
bytes = "1.11.0"
futures = "0.3.31"
tokio-util = { version = "0.7.16", features = ["rt"] }
priority-queue = "2.7.0"
serde_with = {version = "3.16.0", features = ["base64"]}
hex = "0.4.3"
chacha20poly1305 = "0.10.1"
chrono = { version = "0.4.42", features = ["serde"] }
blake2 = "0.10.6"
hkdf = "0.12.4"
base64 = "0.22.1"

[dev-dependencies]
httptest = "0.16.3"
rustls-platform-verifier = "0.6.2"
tokio = { version = "1.48.0", features = ["macros"] }
