[package]
name = "indexd_ffi"
version = "0.2.2"
edition = "2024"
repository = "https://github.com/SiaFoundation/sia-sdk-rs"
license = "MIT"
description = "FFI SDK for interacting with a Sia network indexer"
authors = ["The Sia Foundation"]
categories = ["cryptography::cryptocurrencies"]
keywords = ["sia", "decentralized", "blockchain", "depin", "storage"]

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
base64 = "0.22.1"
indexd = { version = "0.1.2", path = "../indexd" }
log = "0.4.28"
rand = "0.9.2"
rustls = "0.23.34"
rustls-platform-verifier = "0.6.2"
sia_sdk = { version = "0.1.1", path = "../sia_sdk" }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "sync"] }
tokio-util = "0.7.17"
uniffi = { version = "0.30.0", features = ["cli", "tokio"] }
zeroize = "1.8.1"

[build-dependencies]
uniffi = { version = "0.30.0", features = ["build"] }

[[bin]]
# This can be whatever name makes sense for your project, but the rest of this tutorial assumes uniffi-bindgen.
name = "uniffi-bindgen"

[dev-dependencies]
pretty_env_logger = "0.5.0"
