[package]
name = "indexd_wasm"
version = "0.0.1"
edition = "2024"
repository = "https://github.com/SiaFoundation/sia-sdk-rs"
license = "MIT"
description = "SDK for interacting with the Indexd API from WebAssembly"
authors = ["The Sia Foundation"]
categories = ["cryptography::cryptocurrencies"]
keywords = ["sia", "decentralized", "blockchain", "depin", "storage"]

[lib]
name = "indexd_wasm"
path = "src/lib.rs"

[dependencies]
blake2b_simd = "1.0.3"
reqwest = { version = "0.12.23", features = ["json"] }
serde = "1.0.219"
serde_json = "1.0.143"
thiserror = "2.0.16"
sia_sdk = { path = "../sia_sdk" }
time = "0.3.43"
tokio = "1.47.1"
url = "2.5.7"
web-transport = "0.9.6"
priority-queue = "2.5.0"
bytes = "1.10.1"
tokio-util = { version = "0.7.16", features = ["rt"] }
futures = "0.3.31"
gloo-timers = { version = "0.3.0", features = ["futures"] }
chrono = "0.4.42"
gloo-console = "0.3.0"

[dev-dependencies]
rand = "0.9.2"
httptest = "0.16.3"
