[package]
name = "mux"
version = "0.1.0"
edition = "2024"

[dependencies]
blake2b_simd = "1.0.4"
chacha20poly1305 = "0.10.1"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
rand_core = { version = "0.6", features = ["getrandom"] }
thiserror = "2.0.18"
tokio = { version = "1", features = ["io-util", "rt", "rt-multi-thread", "macros", "sync", "time", "net"] }
tokio-util = "0.7.18"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
