[package]
name = "mux"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/SiaFoundation/sia-sdk-rs"
license = "MIT"
description = "Encrypted stream multiplexer for Sia peer-to-peer communication"
authors = ["The Sia Foundation"]
categories = ["network-programming", "cryptography"]
keywords = ["sia", "decentralized", "blockchain", "depin", "storage"]

[dependencies]
blake2b_simd = "1.0.4"
chacha20poly1305 = "0.10.1"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
rand_core = { version = "0.6", features = ["getrandom"] }
thiserror = "2.0.18"
tokio = { version = "1", features = ["io-util", "rt", "macros"] }
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
