[package]
name = "sia_mux"
version = "0.0.1"
edition = "2024"
repository = "https://github.com/SiaFoundation/sia-sdk-rs"
license = "MIT"
description = "Encrypted stream multiplexer for Sia peer-to-peer communication"
authors = ["The Sia Foundation"]
categories = ["network-programming", "cryptography"]
keywords = ["sia", "decentralized", "blockchain", "depin", "storage"]

[dependencies]
bytes = "1"
blake2b_simd = "1.0.4"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
rand_core = { version = "0.6", features = ["getrandom"] }
ring = "0.17"
thiserror = "2.0.18"
tokio = { version = "1", features = ["io-util", "rt", "rt-multi-thread", "macros", "sync", "time", "net"] }
tokio-util = "0.7.18"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
zeroize = { version = "1", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.8", features = ["async_tokio"] }
sia_sdk = { path = "../sia_sdk" }
serde_json = "1"
tokio = { version = "1", features = ["test-util"] }

[[bench]]
name = "mux"
harness = false
