[package]
name = "sia_rhp4_quic"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/SiaFoundation/sia-sdk-rs"
license = "MIT"
description = "Low-level SDK for managing RHP4 QUIC connections"
authors = ["The Sia Foundation"]
categories = ["cryptography::cryptocurrencies"]
keywords = ["sia", "decentralized", "blockchain", "depin", "storage"]

[lib]
name = "quic"

[dependencies]
quinn = "0.11.8"
rustls = "0.23.31"
sia_sdk = { version = "0.0.2", path = "../sia" }
thiserror = "2.0.16"
time = "0.3.41"
tokio = "1.47.1"

[dev-dependencies]
rustls-platform-verifier = "0.6.1"
