[package]
name = "sia_core"
version = "0.3.1"
edition = "2024"
repository = "https://github.com/SiaFoundation/sia-sdk-rs"
license = "MIT"
description = "Low-level SDK for interacting with the Sia decentralized storage network"
authors = ["The Sia Foundation"]
categories = ["cryptography::cryptocurrencies"]
keywords = ["sia", "decentralized", "blockchain", "depin", "storage"]

[lib]
path = "src/lib.rs"

[dependencies]
base64 = "0.22.1"
bip39 = "2.2.2"
blake2 = "0.10.6"
blake2b_simd = "1.0.4"
bytes = "1.11.1"
chrono = { version = "0.4.44", features = ["serde"] }
ed25519-dalek = "2.2.0"
hex = "0.4.3"
num-bigint = "0.4.6"
num-rational = { version = "0.4.2", features = ["num-bigint"] }
num-traits = "0.2.19"
rayon = "1.12.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
sia_core_derive = { version = "0.1.0", path = "../sia_core_derive" }
thiserror = "2.0.18"
uint = "0.10.0"
zeroize = { version = "1.8.1", features = ["zeroize_derive"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = "1.12.0"
tokio = { version = "1.51.1", features = ["macros", "rt", "sync", "io-util", "time"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1.51.1", features = ["macros", "rt", "sync", "io-util"] }

[dev-dependencies]
criterion = { version = "0.8", features = ["async_tokio"] }
tokio = { version = "1.50.0", features = [
    "macros",
    "rt-multi-thread",
    "sync",
    "io-util",
] }
rand = "0.10.1"

[[bench]]
name = "merkle_root"
harness = false
