[package]
name = "sia-sdk"
version = "0.0.1"
edition = "2024"
repository = "https://github.com/SiaFoundation/sia-sdk-rs"
license = "MIT"
description = "Implementation of the Rust SDK"
authors = ["The Sia Foundation"]
categories = ["cryptography::cryptocurrencies"]
keywords = ["sia", "decentralized", "blockchain", "depin", "storage"]

[lib]

[dependencies]
bytes = "1.10.1"
hex = "0.4.3"
into_inner = "0.1.2"
sia-proto = { version = "0.0.2", path = "../sia" }
tokio = { version = "1.45.0", features = ["full"] }
web-transport = "0.9.4"

[dev-dependencies]
time = { version = "0.3.41", features = ["serde", "formatting", "parsing"] }
