[package]
name = "sia_sdk"
version = "0.0.2"
edition = "2024"
repository = "https://github.com/SiaFoundation/sia-sdk-rs"
license = "MIT"
description = "Low-level SDK for interacting with the Sia decentralized storage network"
authors = ["The Sia Foundation"]
categories = ["cryptography::cryptocurrencies"]
keywords = ["sia", "decentralized", "blockchain", "depin", "storage"]

[lib]
name = "sia"
path = "src/lib.rs"

[dependencies]
base64 = "0.22.1"
bip39 = "2.2.0"
blake2b_simd = "1.0.3"
bytes = "1.10.1"
chacha20 = "0.9.1"
chrono = { version = "0.4.42", features = ["serde"] }
ed25519-dalek = "2.2.0"
futures = "0.3.31"
hex = "0.4.3"
log = "0.4.27"
num-bigint = "0.4.6"
num-rational = { version = "0.4.2", features = ["num-bigint"] }
num-traits = "0.2.19"
rayon = "1.11.0"
reed-solomon-erasure = "6.0.0"
serde = { version = "1.0.226", features = ["derive"] }
serde-big-array = "0.5.1"
serde_json = "1.0.145"
sha2 = "0.10.9"
sia-sdk-derive = { version = "0.0.2", path = "../sia_derive" }
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = [
    "macros",
    "rt",
    "sync",
    "io-util",
    "time",
] }
uint = "0.10.0"
zeroize = { version = "1.8.1", features = ["zeroize_derive"] }

[dev-dependencies]
criterion = { version = "0.7", features = ["async_tokio"] }
tokio = { version = "1.47.1", features = [
    "macros",
    "rt-multi-thread",
    "sync",
    "io-util",
] }
rustls-platform-verifier = "0.6.1"
rand = "0.9.2"

[[bench]]
name = "merkle_root"
harness = false
