[package]
name = "sia_sdk"
version = "0.2.0"
edition = "2024"
repository = "https://github.com/SiaFoundation/sia-sdk-rs"
license = "MIT"
description = "Low-level SDK for interacting with the Sia decentralized storage network"
authors = ["The Sia Foundation"]
categories = ["cryptography::cryptocurrencies"]
keywords = ["sia", "decentralized", "blockchain", "depin", "storage"]

[lib]
name = "sia"
path = "src/lib.rs"

[dependencies]
base64 = "0.22.1"
bip39 = "2.2.2"
blake2 = "0.10.6"
blake2b_simd = "1.0.4"
bytes = "1.11.1"
chacha20 = { version = "0.10.0", features = ["xchacha"] }
chrono = { version = "0.4.44", features = ["serde"] }
ed25519-dalek = "2.2.0"
futures-channel = "0.3"
futures-io = "0.3"
futures-util = { version = "0.3", features = ["io"] }
hex = "0.4.3"
num-bigint = "0.4.6"
num-rational = { version = "0.4.2", features = ["num-bigint"] }
num-traits = "0.2.19"
rayon = "1.11.0"
reed-solomon-erasure = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
sia-sdk-derive = { version = "0.0.6", path = "../sia_derive" }
thiserror = "2.0.18"
uint = "0.10.0"
zeroize = { version = "1.8.1", features = ["zeroize_derive"] }

[dev-dependencies]
criterion = { version = "0.8", features = ["async_tokio"] }
tokio = { version = "1.49.0", features = [
    "macros",
    "rt-multi-thread",
    "sync",
    "io-util",
] }
rustls-platform-verifier = "0.6.2"
rand = "0.10.0"

[[bench]]
name = "merkle_root"
harness = false
