[package]
name = "sia_storage"
version = "0.8.0"
edition = "2024"
repository = "https://github.com/SiaFoundation/sia-sdk-rs"
license = "MIT"
description = "SDK for interacting with a Sia network indexer"
authors = ["The Sia Foundation"]
categories = ["cryptography::cryptocurrencies"]
keywords = ["sia", "decentralized", "blockchain", "depin", "storage"]

[lib]
path = "src/lib.rs"
bench = false

# --- Cross-platform dependencies ---
[dependencies]
serde = "1.0.228"
serde_json = "1.0.149"
thiserror = "2.0.18"
sia_core = { path = "../sia_core", version = "0.3.1" }
rand = "0.10.1"
blake2b_simd = "1.0.4"
url = { version = "2.5.8", features = ["serde"] }
log = "0.4.29"
bytes = "1.11.1"
priority-queue = "2.7.0"
serde_with = { version = "3.18.0", features = ["base64"] }
hex = "0.4.3"
chacha20poly1305 = "0.10.1"
chacha20 = { version = "0.10.0", features = ["xchacha"] }
chrono = { version = "0.4.44", features = ["serde"] }
blake2 = "0.10.6"
reed-solomon-erasure = "6.0.0"
zeroize = { version = "1.8.0", features = ["derive"] }
hkdf = "0.12.4"
base64 = "0.22.1"
ed25519-dalek = "2.2.0"
web-time = "1"
getrandom = "0.4"
tokio-util = { version = "0.7.18", features = ["rt"] }

# --- Native-only dependencies ---
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# do not update to reqwest v0.13 until https://github.com/seanmonstar/reqwest/issues/2968 is resolved
reqwest = { version = "0.12.28", default-features = false, features = ["charset", "http2", "json", "rustls-tls"] }
tokio = { version = "1.52.0", features = ["fs", "sync", "io-util", "macros", "rt", "time"] }
tokio-util = { version = "0.7.18", features = ["rt"] }
rayon = "1.12.0"
sia_mux = { version = "0.1.0", path = "../sia_mux" }

# --- WASM-only dependencies ---
[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { version = "0.12.28", default-features = false, features = ["json"] }
tokio = { version = "1.52.0", features = ["sync", "io-util", "macros", "rt"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "WebTransport",
    "WebTransportOptions",
    "WebTransportBidirectionalStream",
    "WebTransportSendStream",
    "WebTransportReceiveStream",
    "WebTransportHash",
    "WebTransportCloseInfo",
    "ReadableStream",
    "ReadableStreamDefaultReader",
    "WritableStream",
    "WritableStreamDefaultWriter",
    "TransformStream",
] }
getrandom_02 = { package = "getrandom", version = "0.2", features = ["js"] }
getrandom = { version = "0.4.2", features = ["wasm_js"] }
instant = { version = "0.1", features = ["wasm-bindgen"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = { version = "0.8.2", features = ["async_tokio"] }
httptest = "0.16.4"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread", "test-util"] }
env_logger = "0.11.10"
clap = { version = "4.6.1", features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
mock = []

[[bench]]
name = "upload"
harness = false
required-features = ["mock"]
