[package]
name = "sia_storage_ffi"
version = "0.5.1"
edition = "2024"
repository = "https://github.com/SiaFoundation/sia-sdk-rs"
license = "MIT"
description = "FFI SDK for interacting with a Sia network indexer"
authors = ["The Sia Foundation"]
categories = ["cryptography::cryptocurrencies"]
keywords = ["sia", "decentralized", "blockchain", "depin", "storage"]

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
async-trait = "0.1.89"
base64 = "0.22.1"
sia_storage = { version = "0.5.1", path = "../sia_storage", default-features = false }
log = "0.4.29"
rand = "0.10.0"
sia_core = { version = "0.3.1", path = "../sia_core" }
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["rt-multi-thread", "sync"] }
tokio-util = "0.7.18"
uniffi = { version = "=0.29.4", features = ["cli", "tokio"] } # be careful updating as it may break uniffi-react-native-bindgen
zeroize = "1.8.1"


[build-dependencies]
uniffi = { version = "0.30.0", features = ["build"] }
tokio = { version = "1.50.0", features = ["rt-multi-thread", "sync", "io-util"] }

[[bin]]
name = "uniffi-bindgen"

[dev-dependencies]
pretty_env_logger = "0.5.0"

[features]
mock = []
