[package]
name = "sia_storage_wasm"
version = "0.6.0"
edition = "2024"
repository = "https://github.com/SiaFoundation/sia-sdk-rs"
license = "MIT"
description = "WASM bindings for the Sia storage SDK"
authors = ["The Sia Foundation"]
categories = ["cryptography::cryptocurrencies"]
keywords = ["sia", "decentralized", "blockchain", "depin", "storage"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
sia_storage = { version = "0.6.0", path = "../sia_storage" }
sia_core = { version = "0.3.0", path = "../sia_core" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde_json = "1"
chrono = "0.4"
hex = "0.4"
tokio = { version = "1", features = ["rt", "io-util", "sync"] }
console_error_panic_hook = "0.1"
log = "0.4"
console_log = { version = "1", features = ["color"] }
